default/objects/Master_Account_Plan_User_Setting__c/Master_Account_Plan_User_Setting__c.object-meta.xml
<CustomObject>
    <description>User Settings for Master Account Plan</description>
    <label>Master Account Plan User Setting</label>
    <nameField>
        <label>Master Account Plan User Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Account Plan User Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>