default/objects/Master_Account_Plan_User_Setting__c/fields/Master_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_Plan__c</fullName>
    <label>Master Account Plan</label>
    <referenceTo>pq_Master_Account_Plan__c</referenceTo>
    <relationshipLabel>Master Account Plan User Settings</relationshipLabel>
    <relationshipName>Master_Account_Plan_User_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>