default/objects/Master_Account_Plan_User_Setting__c/fields/Show_Closed_Account_Plans__c.field-meta.xml
<CustomField>
    <fullName>Show_Closed_Account_Plans__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Closed Account Plans</label>
    <type>Checkbox</type>
</CustomField>